frontend/src/index.css
body {
 
    font-family: Helvetica, sans-serif;
    font-size: 16px;
   
    color: rgb(36, 33, 30);
    -webkit-font-smoothing: antialiased;
    font-weight: 100;
    line-height: 185%;
    margin: 0;
    scrollbar-width: none;
    -ms-overflow-style: none; 
    
}
body::-webkit-scrollbar {
  display: none;
}

.App {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

}

.nav {
  font-family: Helvetica;
  font-weight: 400;
  display: grid;
  position: fixed;
  z-index: 6;
  top: 0;
  left: 0;
  background-color: rgba(144, 148, 126, 0.5);
  width: 100%;
  margin: 0;
  padding-right: 1em;
  border-bottom: 1px solid rgba(156, 143, 135, 0.6);
}



.nav_icon{
  grid-row: 2;
  padding: 1px;
  text-align: center;
  background-image: linear-gradient(#613535, #613535);
  background-size: 0 2px, auto;
  background-repeat: no-repeat;
  background-position: center bottom;
  transition: all .3s ease-out;
}



.nav_icon:hover {
  color: #613535;
  cursor: pointer;
  background-size: 90% 2px, auto;
}

a { 
  color: inherit; 
}

.main_body {
  
  position: fixed;
  top: 0%;
  z-index: 0;
  background-color: rgb(244, 247, 238);
  /* background-image: url('./images/home/canvaspainted.jpg'); */
  background-size: cover;
  background-repeat: no-repeat;
  padding: 1em;
  width: 100%;
  height: 100%;
  overflow: scroll;

}

.home_page {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 37% 8% 8% 5% 3% 3% 3% 3% 5%;
  justify-items: center;
  padding: 1rem;
  margin-top: 3rem;
  font-family: helvetica;
}

.home_page img{
  grid-row: 1;
  width: 250px;
  
}

.home_page h2{
  font-size: 28px;
}

.home_page div{
  font-size: 20px;
}

.page_background_blur{
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  position: fixed;
  z-index: 7;
  background-size: cover;
  background-repeat: no-repeat;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  

}

.post_form_background {
  position: absolute;
  z-index: 7;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(3px);
  background-size: cover;
  background-repeat: no-repeat;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
}

.post_form {
  margin: 3rem;
  position: absolute;
  z-index: 8;
  width: 100%;
  height: 95%;
  padding: 40px;
  
  text-align: center;
  border-radius: 2px;
  overflow: scroll;
}

.blog_title{
  font-family: Didot;
  margin-bottom: 14px;
  margin-top: 5px;
  grid-row: 2;
  grid-column: 4;
  align-content: space-around;
  background-color: rgb(212, 207, 207);
  bottom: 1%;
  width: 99%;
  float: left;
  padding: 2px;
 
 
  overflow: none;
}

.login_box{
  width: 300px;
  padding: 40px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  
}

.login_box h1{
  
  color:  #b44949;
  text-transform: uppercase;
}

.login_box input[type = "text"],.login_box input[type = 'password'] {
  border: 0;
  background: none;
  display: block;
  margin: 20px auto;
  text-align: center;
  padding: 14px 10px;
  width: 200px;
  outline: none;
  color: white;
  border-bottom: 1px solid  #b44949;
  transition: 0.25s;
}

.login_box input[type = 'text']:hover,.login_box input[type= "password"]:hover{
  
  -webkit-box-shadow: 0 4px 5px -5px #d18e8e;
  -moz-box-shadow: 0 4px 5px -5px #d18e8e;
  box-shadow: 0 4px 5px -5px #d18e8e;
  border-color:  #b44949;
}

.login_box button[type = "submit"] {
  border: 0;
  background: none;
  display: block;
  margin: 20px auto;
  text-align: center;
  border: 1px solid  #b44949;
  padding: 14px 40px;
  width: 200px;
  outline: none;
  color: white;

  transition: 0.25s;
  cursor: pointer;
}

.login_box button[type = 'submit']:hover{
  outline: none;
  box-shadow: 0 0 4px #d18e8e;
  border-color:  #b44949;
}

.log_out {
  position: fixed;
  z-index: 4;
  margin-top: .7rem;
  font-size: 12px;
  color: rgb(73, 69, 59);
  top: 2em;
  right: 1em;
  transition: .2s ease-out;
  cursor: pointer;
}

.log_out:hover {
  color:  #b44949;
}

.blog_snip {
  font-family: Didot;
  border-bottom: 1px solid rgba(207, 176, 176, 0.6);
  margin-bottom: 10px;
}

.blog_snip_paragraph {
  font-size: 14px;
}

.read_more {
  font-style: italic;
  font-size: 12px;
}

.read_more:hover {
  transition: 0.3s;
  color:  #b44949;
  cursor: pointer;
}

.blog_date {
  font-size: 12px;
}

.project_background{
  display: block;
 
  color: whitesmoke;
  background-size: cover;
  z-index: 0;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 0px;
  min-height: 100%;
  min-width: 100%;
}
.project_list {
  margin-top: 2rem;
  display: flex;
  flex-wrap: wrap;
  z-index: 1;
  width: 100%;
  height: 100%;
  justify-content: center;
  text-align: center;
  transition: all 2s;
}

.project_card {
  width: 100%;
  min-width: 220px;
  max-width: 300px;
  position: relative;
  z-index: 2;
  height: 10rem;
  border-radius: 10px;
  overflow: hidden;
  transition: .2s ;
  align-content: center;
  transition: 1s ease-in-out;
}

.project_card img{
  width: 100%;
  position: absolute;
  left: 0;
  z-index: 2;
  overflow: hidden;
  height: 100%;
}

.expertly_card {
  font-family: Didot;
  font-size: 18px;
  position: absolute;
  z-index: 3;
  height: 100%;
  width: 100%;
  background-color: rgba(31, 20, 65, 0.8);
  color: rgb(211, 213, 221);
  padding-top: 1.7em;
  transition: all 1s ease-in-out;
}

.cursed_card {
  font-family: Didot;
  font-size: 18px;
  position: absolute;
  z-index: 3;
  height: 100%;
  width: 100%;
  background-color: rgba(19, 17, 17, 0.8);
  color: #b44949;
  padding-top: 1.7em;
  transition: all 1s ease-in-out;
}

.project_info {
  display: block;
  position: absolute;
  background-color: rgba(19, 17, 17, 0.85);
  color: whitesmoke;
  z-index: 5;
  width: 100%;
  height: 100%;
  opacity: 0%;
  transition: all .5s ease-in-out;
  border-radius: 10px;
  overflow: hidden;
}

.project_info p{
  align-content: center;
  text-align: left;
  color: white;
  font-size: .8rem;
  padding: 1rem;
  margin: 0;
  line-height: 1.1rem;
}

.project_info a{
  text-decoration: none;
  display: inline-block;
  padding: .01rem;
  margin: .01rem;
  height: 1.6rem;
  cursor: pointer;
  text-align: center;
  font-size: .8rem;
  background-image: linear-gradient(#b44949, #b44949);
  background-size: 0 1.2px, auto;
  background-repeat: no-repeat;
  background-position: center bottom;
  transition: all .3s ease-out;
  
  position: absolute;
  left: 50%;
  top: 60%;
  transition: all .4s; 
}

.project_info a:hover{
  color: #b44949;
  cursor: pointer;
  background-size: 90% 1px, auto;
}

.expertly_card h1{
  transition: all .5s ease-in-out;
}

.project_card:hover .project_info{
 opacity: 1;
}



.project_card:hover .expertly_card h1{
 opacity: 0%;
 font-size: 22px;

}
.cursed_card h1{
  transition: all .5s ease-in-out;
}

.project_card:hover .cursed_card h1{
  opacity: 0%;
  font-size: 22px;
 
 }

 .choose_adventure_card {
  font-family: Didot;
  font-size: 12px;
  position: absolute;
  z-index: 3;
  height: 100%;
  width: 100%;
  background-color: rgba(19, 17, 17, 0.6);
  color: #81b3ec;
  padding-top: 1.7em;
  transition: all 1s ease-in-out;
}

.choose_adventure_card h1{
  transition: all .7s ease-in-out;
}

.project_card:hover .choose_adventure_card h1{
  opacity: 0%;
  font-size: 12px;
 
 }

 .about {
   display: grid;
   grid-template-columns: 100%;
   padding: 1.5rem;
 }

 .about h2{
   margin: 0px;
 }

 .about img{
   width: 200px;
 }

 .post_title {
  font-size: 20px;
 }

 .blog_container {
   font-family: Didot;
  position: relative;
  display: grid;
  z-index: 1;
  margin: 2rem auto;
  text-align: justify;
  width: 60%;
  min-width: 300px;
  max-width: 500px;
  word-wrap: break-word;
}

@media only screen and (min-width: 600px) {
.blog_container {
  position: relative;
  z-index: 1;
  display: grid;
  margin: 2rem auto;
  text-align: justify;
  width: 60%;
  min-width: 500px;
  max-width: 800px;
}

.about {
  display: grid;
  grid-template-columns: 50% 50%;
  padding: 1.5rem;
}

.about div{
  max-width: 90%;
}

.about img{
  margin-top: 1rem;
  grid-column: 2;
}





.project_card {
  width: 50%;
  position: relative;
  z-index: 2;
  height: 10em;
  border-radius: 10px;
  overflow: hidden;
  transition: .2s ;
  align-content: center;
  margin: 1em;
  transition: 1s ease-in-out;
}

.project_card img{
  width: 100%;
  position: absolute;
  left: 0;
  z-index: 2;
  overflow: hidden;
  height: 100%;
}

.home_page {
  display: grid;
  grid-template-columns: 3fr 70%;
  grid-template-rows: 12% 5% 8% 10% 10%;
  justify-items: left;
  padding: 1rem;
  margin-top: 3rem;
  margin-left: 3rem;
}

.home_page img{
  grid-column: 1;
  grid-row-start: 1;
  grid-row-end: 5;
}
.home_page h2{
  font-size: 30px;
  margin: .1rem;
}

.home_page div{
  grid-column: 2;
  font-size: 26px;
  margin: .1rem;
}

}

.Admin {
  display: flex;
  flex-wrap: wrap;
  margin-left: 1rem;
  margin-right: 1rem;
  margin-top: 3rem;
  transition: .3s;
}

.Admin form{
  background: rgb(44, 42, 42);
  min-width: 500px;
  max-width: 800px;

}

.Admin button {
  font-family: Didot;
  background: none;
  background-image: linear-gradient(#b44949, #b44949);
  background-size: 0 1px, auto;
  background-repeat: no-repeat;
  background-position: center bottom;
  transition: all .3s ease-out;

  border: none;
  padding: 5px;
  color: rgb(208, 230, 219);
  margin-bottom: 1em;
  
}

.Admin button:hover{
  color:  #b44949;
  cursor: pointer;
  background-size: 100% 1px, auto;
}

.new_post_div{
  position: fixed;
  z-index: 3;
  width: 100%;
  border-bottom: 1px solid grey;
  margin-bottom: 1em;
}

.new_post{
  position: relative;
  z-index: 3;
  font-size: 17px;
  text-align: left;
  margin-bottom: 0;
  padding: 0;
}

.Admin form{
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 5%, 85%, 5%;
  background: rgb(44, 42, 42);
  min-width: 200px;
  max-width: 500px;
}

.blog_title{
  grid-column: 1;
  grid-row: 1;
}

.blog_content{
  background-color: rgba(236, 230, 230, 0.8);
  grid-column: 1;
  grid-row: 2;
}

.blog_content textarea{
  padding: 1em;
  height: 20em;
  word-wrap: break-word;
  resize: none;
  width: 90%;
}


.admin_blog_container {
  position: relative;
  margin: 4rem;

}

